--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
           <div class="cat-profile">
             <img src="public/images/viva fresh.jpg" alt="">
           </div>
+          <div class="cat-profile">
+            <img src="/images/etc.png" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="public/images/meridian.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="public/images/spar kosova.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="public/images/viva fresh.jpg" alt="">
+          </div>
 
         </div>
       </section>
