--- a/index.html
+++ b/index.html
@@ -145,6 +145,108 @@
           </div>
         </div>
 
+        <div class="product-card">
+          <div class="open-modal-btn" data-target="#modal1">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
+              <img class="productImage" src="/images/1.png" alt="Proudct Image">
+              <div class="discount-label">-14%</div>
+              <div class="dropdown productEditDp">
+                <button class="dropdown-button admin-panel productDropBtn"><span class="material-symbols-outlined">more_horiz</span></button>
+                <div class="dropdown-content">
+                  <button class="dropdown-option open-modal-btn" data-target="#modal2">Edit</button>
+                  <button class="dropdown-option open-modal-btn" data-target="#modal3">Delete</button>
+                </div>
+              </div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
+              <div>
+                <span>€3.99</span>
+                <strike>9.20</strike>
+              </div>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="open-modal-btn" data-target="#modal1">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
+              <img class="productImage" src="/images/1.png" alt="Proudct Image">
+              <div class="discount-label">-14%</div>
+              <div class="dropdown productEditDp">
+                <button class="dropdown-button admin-panel productDropBtn"><span class="material-symbols-outlined">more_horiz</span></button>
+                <div class="dropdown-content">
+                  <button class="dropdown-option open-modal-btn" data-target="#modal2">Edit</button>
+                  <button class="dropdown-option open-modal-btn" data-target="#modal3">Delete</button>
+                </div>
+              </div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
+              <div>
+                <span>€3.99</span>
+                <strike>9.20</strike>
+              </div>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="open-modal-btn" data-target="#modal1">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
+              <img class="productImage" src="/images/1.png" alt="Proudct Image">
+              <div class="discount-label">-14%</div>
+              <div class="dropdown productEditDp">
+                <button class="dropdown-button admin-panel productDropBtn"><span class="material-symbols-outlined">more_horiz</span></button>
+                <div class="dropdown-content">
+                  <button class="dropdown-option open-modal-btn" data-target="#modal2">Edit</button>
+                  <button class="dropdown-option open-modal-btn" data-target="#modal3">Delete</button>
+                </div>
+              </div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
+              <div>
+                <span>€3.99</span>
+                <strike>9.20</strike>
+              </div>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+
+
+
       </section>
       </div>
     </main>
