--- a/index.html
+++ b/index.html
@@ -218,14 +218,9 @@
       </div>
 
       <div class="space-btw">
-        <p>Njesia:</p>
-        <p>400gr</p>
-      </div>
-
-      <div class="space-btw">
         <p>Origjina:</p>
         <div class="originContainer">
-          <img class="originFlag" src="public/icons/greece.png" alt="">
+          <img class="originFlag" src="/icons/greece.png" alt="">
         </div>
 
       </div>
@@ -273,14 +268,16 @@
           <input type="text" id="product-name" name="product-name" required>
         </div>
 
-        <div class="add-input-group">
-          <label for="product-price">Qmimi Produktit</label>
-          <input type="number" id="product-price" name="product-price" required>          
-        </div>
-
-        <div class="add-input-group">
-          <label for="product-discount">Zbritja Produktit</label>
-          <input type="number" id="product-discount" name="product-discount" required>
+        <div class="row-input-group">
+          <div class="add-input-group">
+            <label for="product-price">Qmimi Produktit</label>
+            <input type="number" id="product-price" name="product-price" required>          
+          </div>
+  
+          <div class="add-input-group">
+            <label for="product-discount">Zbritja Produktit</label>
+            <input type="number" id="product-discount" name="product-discount" required>
+          </div>
         </div>
 
         <div class="add-input-group">
@@ -298,7 +295,6 @@
           <input type="text" id="product-origin" name="product-origin" required>
         </div>
 
-        <!-- TODO: me ndru ne menyr professionale me bo -->
         <div style="display: flex;flex-direction: row;column-gap: 20px;">
           <div class="add-input-group">
             <label for="product-expiry">Added Produkt</label>
