--- a/index.html
+++ b/index.html
@@ -279,11 +279,6 @@
             <input type="number" id="product-discount" name="product-discount" required>
           </div>
         </div>
-
-        <div class="add-input-group">
-          <label for="product-unit">Sasia Produktit</label>
-          <input type="text" id="product-unit" name="product-unit" required>
-        </div>
         
         <div class="add-input-group">
           <label for="product-image">Product Image</label>
@@ -313,7 +308,7 @@
 
         <div class="add-input-group">
           <label for="product-link">Linku Produktit</label>
-          <input type="text" id="product-link" name="product-link" required>
+          <input type="link" id="product-link" name="product-link" required>
         </div>
 
         <div class="add-input-group">
