--- a/index.html
+++ b/index.html
@@ -408,39 +408,38 @@
     <div class="input-g-container">
       <form>
         <div class="d-flex flex-row flex-between col-gap-10">
-          <div class="d-flex flex-column w-100">
+          <div class="input-base-style d-flex flex-column w-100">
             <label>Emri Produktit</label>
-            <input type="text" id="product-name" name="product-name" required>
+            <input class="input-style" type="text" id="product-name" name="product-name" required>
           </div>
-          <div class="d-flex flex-column w-100">
+          <div class="input-base-style d-flex flex-column w-100">
             <label>Ngarko Imazhin</label>
-            <input type="file" id="product-image" name="product-image" accept="image/*" required>
-          </div>
+            <input class="input-style" type="file" id="product-image" name="product-image" accept="image/*" required>
+         </div>
         </div>
         <div class="d-flex flex-row flex-between col-gap-10">
-          <div class="d-flex flex-column w-100">
+          <div class="input-base-style d-flex flex-column w-100">
             <label>Qmimi Produktit</label>
-            <input type="number" id="product-price" name="product-price" required>
+            <input class="input-style" type="number" id="product-price" name="product-price" required>
           </div>
-          <div class="add-input-group d-flex flex-column w-100">
+          <div class="input-base-style d-flex flex-column w-100">
             <label>Zbritja Produktit</label>
-            <input type="number" id="product-discount" name="product-discount" required>
+            <input class="input-style" type="number" id="product-discount" name="product-discount" required>
           </div>
         </div>
-        
         <div class="d-flex flex-row flex-between col-gap-10">
-          <div class="d-flex flex-column w-100">
+          <div class="input-base-style d-flex flex-column w-100">
             <label>Add data</label>
-            <input type="date" id="product-expiry" name="product-expiry" class="responsive-date-input" required>
+            <input type="date" id="product-expiry" name="product-expiry" class="input-style" required>
           </div>
-          <div class="d-flex flex-column w-100">
+          <div class="input-base-style d-flex flex-column w-100">
             <label>Data e Skadimit</label>
-            <input type="date" id="product-expiry" name="product-expiry" class="responsive-date-input" required>
+            <input type="date" id="product-expiry" name="product-expiry" class="input-style" required>
           </div>
         </div>
-        <div class="d-flex flex-column w-100">
+        <div class="input-base-style d-flex flex-column w-100">
           <label>Origjina</label>
-          <select id="city" name="city" required>
+          <select id="city" name="city" class="input-style" required>
             <option value="TeGjitha">Te Gjitha</option>
               <option value="tirana">Albania</option>
               <option value="prishtina">Serbia</option>
@@ -450,9 +449,9 @@
           </select>
         </div>
         <div class="d-flex flex-row flex-between col-gap-10">
-          <div class="d-flex flex-column w-100">
+          <div class="input-base-style d-flex flex-column w-100">
             <label>Marketi</label>
-            <select id="city" name="city" required>
+            <select id="city" name="city" class="input-style" required>
               <option value="TeGjitha">Te Gjitha</option>
                 <option value="tirana">ETC</option>
                 <option value="prishtina">Viva Fresh</option>
@@ -461,9 +460,9 @@
                 <option value="vlora">Spar</option>
             </select>
           </div>
-          <div class="d-flex flex-column w-100">
+          <div class="input-base-style d-flex flex-column w-100">
             <label>Qyteti</label>
-            <select id="city" name="city" required>
+            <select id="city" name="city" class="input-style" required>
                 <option value="TeGjitha">Te Gjitha</option>
                 <option value="prishtina">Prishtina</option>
                 <option value="shkodra">Gjilani</option>
@@ -472,9 +471,9 @@
             </select>
           </div>
         </div>
-        <div class="d-flex flex-column w-100">
+        <div class="input-base-style d-flex flex-column w-100">
           <label>Linku Zbritjes</label>
-          <input type="link" id="product-name" name="product-name" required>
+          <input class="input-style" type="link" id="product-name" name="product-name" required>
         </div>
       </form>
     </div>
