--- a/index.html
+++ b/index.html
@@ -450,14 +450,14 @@
         </div>
         <div class="d-flex flex-row flex-between col-gap-10">
           <div class="input-base-style d-flex flex-column w-100">
-            <label>Marketi</label>
+            <label>Qyteti</label>
             <select id="city" name="city" class="input-style" required>
               <option value="TeGjitha">Te Gjitha</option>
-                <option value="tirana">ETC</option>
-                <option value="prishtina">Viva Fresh</option>
-                <option value="shkodra">Super Viva</option>
-                <option value="durres">Meridian</option>
-                <option value="vlora">Spar</option>
+              <option value="tirana">ETC</option>
+              <option value="prishtina">Viva Fresh</option>
+              <option value="shkodra">Super Viva</option>
+              <option value="durres">Meridian</option>
+              <option value="vlora">Spar</option>
             </select>
           </div>
           <div class="input-base-style d-flex flex-column w-100">
