--- a/index.html
+++ b/index.html
@@ -437,15 +437,15 @@
             <input type="date" id="product-expiry" name="product-expiry" class="input-style" required>
           </div>
         </div>
-        <div class="input-base-style d-flex flex-column w-100">
+        <div class="d-flex flex-column w-100">
           <label>Origjina</label>
           <select id="city" name="city" class="input-style" required>
             <option value="TeGjitha">Te Gjitha</option>
-              <option value="tirana">Albania</option>
-              <option value="prishtina">Serbia</option>
-              <option value="shkodra">Macedonia</option>
-              <option value="durres">Belgium</option>
-              <option value="vlora">England</option>
+            <option value="tirana">Albania</option>
+            <option value="prishtina">Serbia</option>
+            <option value="shkodra">Macedonia</option>
+            <option value="durres">Belgium</option>
+            <option value="vlora">England</option>
           </select>
         </div>
         <div class="d-flex flex-row flex-between col-gap-10">
