--- a/index.html
+++ b/index.html
@@ -409,9 +409,10 @@
       <form>
         <div class="d-flex flex-row flex-between col-gap-10">
           <div class="input-base-style d-flex flex-column w-100">
-            <label>Emri Produktit</label>
-            <input class="input-style" type="text" id="product-name" name="product-name" required>
+            <label for="product-name">Linku Zbritjes</label>
+            <input class="input-style" type="url" id="product-name" name="product-name" required>
           </div>
+          
           <div class="input-base-style d-flex flex-column w-100">
             <label>Ngarko Imazhin</label>
             <input class="input-style" type="file" id="product-image" name="product-image" accept="image/*" required>
