--- a/index.html
+++ b/index.html
@@ -738,6 +738,7 @@
 
   <!-- End of Bottom Navigation Button Script -->
 
+  <!-- Dropdown Button Script -->
   <script>
     document.querySelectorAll('select.input-style').forEach((dropdown) => {
     dropdown.addEventListener('touchstart', () => {
