--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <input type="date" id="product-expiry" name="product-expiry" class="input-style" required>
           </div>
           <div class="input-base-style d-flex flex-column w-100">
-            <label for="product-expiry-future">Expiry Date (1 day forward)</label>
+            <label for="product-expiry-future">Expiry Date</label>
             <input type="date" id="product-expiry-future" name="product-expiry-future" class="input-style" required>
           </div>
         </div>
