--- a/index.html
+++ b/index.html
@@ -409,10 +409,9 @@
       <form>
         <div class="d-flex flex-row flex-between col-gap-10">
           <div class="input-base-style d-flex flex-column w-100">
-            <label for="product-name">Linku Zbritjes</label>
-            <input class="input-style" type="url" id="product-name" name="product-name" required>
+            <label>Emri Produktit</label>
+            <input class="input-style" type="text" id="product-name" name="product-name" required>
           </div>
-          
           <div class="input-base-style d-flex flex-column w-100">
             <label>Ngarko Imazhin</label>
             <input class="input-style" type="file" id="product-image" name="product-image" accept="image/*" required>
@@ -430,35 +429,35 @@
         </div>
         <div class="d-flex flex-row flex-between col-gap-10">
           <div class="input-base-style d-flex flex-column w-100">
-            <label>Add data</label>
+            <label for="product-expiry">Add Data</label>
             <input type="date" id="product-expiry" name="product-expiry" class="input-style" required>
           </div>
           <div class="input-base-style d-flex flex-column w-100">
-            <label>Data e Skadimit</label>
-            <input type="date" id="product-expiry" name="product-expiry" class="input-style" required>
+            <label for="product-expiry-future">Expiry Date</label>
+            <input type="date" id="product-expiry-future" name="product-expiry-future" class="input-style" required>
           </div>
         </div>
-        <div class="d-flex flex-column w-100">
+        <div class="input-base-style d-flex flex-column w-100">
           <label>Origjina</label>
           <select id="city" name="city" class="input-style" required>
             <option value="TeGjitha">Te Gjitha</option>
-            <option value="tirana">Albania</option>
-            <option value="prishtina">Serbia</option>
-            <option value="shkodra">Macedonia</option>
-            <option value="durres">Belgium</option>
-            <option value="vlora">England</option>
+              <option value="tirana">Albania</option>
+              <option value="prishtina">Serbia</option>
+              <option value="shkodra">Macedonia</option>
+              <option value="durres">Belgium</option>
+              <option value="vlora">England</option>
           </select>
         </div>
         <div class="d-flex flex-row flex-between col-gap-10">
           <div class="input-base-style d-flex flex-column w-100">
-            <label>Qyteti</label>
+            <label>Marketi</label>
             <select id="city" name="city" class="input-style" required>
               <option value="TeGjitha">Te Gjitha</option>
-              <option value="tirana">ETC</option>
-              <option value="prishtina">Viva Fresh</option>
-              <option value="shkodra">Super Viva</option>
-              <option value="durres">Meridian</option>
-              <option value="vlora">Spar</option>
+                <option value="tirana">ETC</option>
+                <option value="prishtina">Viva Fresh</option>
+                <option value="shkodra">Super Viva</option>
+                <option value="durres">Meridian</option>
+                <option value="vlora">Spar</option>
             </select>
           </div>
           <div class="input-base-style d-flex flex-column w-100">
