--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
           </div>
           <div class="input-base-style d-flex flex-column w-100">
             <label>Addressa</label>
-            <input class="input-style" type="number" name="address" required>
+            <input class="input-style" type="text" name="address" required>
           </div>
         </div>
         <div class="input-base-style d-flex flex-column w-100">
